# autoBMAD

./: .gitignore  AGENTS.md  ASYNC_CANCEL_SCOPE_FIX.md  ASYNC_FIX_PLAN.md  ASYNC_FIX_SUMMARY.md  AUTOBMAD_FIX_SUMMARY.md  AsyncDebugger_移除执行报告.md  BASEDPYRIGHT_FIX_SUMMARY.md  BUGFIX_20250109.md  BUGFIX_20260107.md  BUGFIX_20260107_COMPLETION_SUMMARY.txt  BUGFIX_20260107_COMPREHENSIVE_ANALYSIS.md  BUGFIX_20260107_DEBUGPY_INTEGRATION_PLAN.md  BUGFIX_20260107_FINAL.md  BUGFIX_20260107_PROJECT_COMPLETION.md  BUGFIX_20260107_v2.md  BUGFIX_REPORT.md  BUGFIX_SDK_REFACTOR_IMPLEMENTATION_REPORT.md  BUGFIX_SUMMARY_CANCEL_SCOPE.md  CACHED_STATUS_FIX_PLAN.md  CANCEL_SCOPE_CROSS_TASK_SOLUTION.md  CANCEL_SCOPE_FIX_COMPLETION_SUMMARY.md  CANCEL_SCOPE_FIX_DETAILED_PLAN.md  CANCEL_SCOPE_FIX_IMPLEMENTATION_REPORT.md  CANCEL_SCOPE_FIX_PROGRESS.md  CANCEL_SCOPE_FIX_SUMMARY.md  CANCEL_SCOPE_SM_AGENT_FIX_PLAN.md  CANCEL_SCOPE_综合修复报告_20260111.md  CANCEL_SCOPE_综合修复符合性检查报告_20260111.md  CANCEL_SCOPE_跨任务问题与BMAD工作流深度分析报告_20260111.md  CLAUDE.md  CLEANUP_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_ERROR_ANALYSIS_REPORT_20260107.md  CUsersAdministrator.claudeplanslively-dreaming-hopper-agent-a151409.md  DEBUG_FRAMEWORK_ENHANCEMENT_PLAN.md  DEBUG_LOGGING_IMPLEMENTATION_SUMMARY.md  DEBUG_LOGGING_IMPROVEMENT_SUGGESTION.md  DEMO_PERMISSION_SKIP.md  DEPENDENCY_UPDATE_SUMMARY.txt  (+223 more)
basedpyright-workflow/: .bpr.example.json  .bpr.json  FOLDER_ORGANIZATION_SUMMARY.md  PROJECT_USAGE.md  README.md  REFACTORING_COMPLETE.md  TEST_RESULTS.md  USAGE.txt  check_output.txt  claude_fix_build_config.py_20251224_133746.txt  fix_project_errors.ps1  fix_summary_status_parser.md  fix_unified_errors_new.ps1  pyproject.toml  state_manager_check_result.json  test_results.json
basedpyright-workflow/_backup/: clear_claude_prompts.ps1  fix_basedpyright_errors_new.ps1  fix_project_errors.ps1
basedpyright-workflow/basedpyright-workflow/: current_check.json
basedpyright-workflow/basedpyright_workflow/: __init__.py  __main__.py  basedpyright_workflow.py  config.py  ruff_workflow.py
basedpyright-workflow/check_result/: basedpyright_check_result_20260109_011307.json  basedpyright_check_result_20260109_011307.txt  basedpyright_check_result_20260109_011330.json  basedpyright_check_result_20260109_011330.txt
basedpyright-workflow/docs/: BASEDPYRIGHT_CHECK_GUIDE.md  BASEDPYRIGHT_DEMO_RESULTS.md  BASEDPYRIGHT_IMPLEMENTATION_SUMMARY.md  BASEDPYRIGHT_SYSTEM_README.md  SRC_ERRORS_FIX_GUIDE.md  basedpyright_current_report.md  basedpyright_current_status.md  basedpyright_final_conclusion.md  basedpyright_final_summary.md  basedpyright_fix_summary.md  basedpyright_src_debug_report.md  basedpyright_targeted_fixes.md
basedpyright-workflow/prompts/: prompt-application-py-20251217-103413.txt  prompt-application_factory-py-20251217-103413.txt  prompt-base_event_table-py-20251217-103413.txt  prompt-base_validator-py-20251217-103413.txt  prompt-basedpyright-fix.md  prompt-character_selection_dialog-py-20251217-114258.txt  prompt-character_selection_dialog-py-20260104-235911.txt  prompt-cleanup_legacy_services-py-20251217-103413.txt  prompt-config_manager-py-20251217-103413.txt  prompt-consistency_validator-py-20251217-103413.txt  prompt-convert_to_absolute_imports-py-20251217-171524.txt  prompt-dialog_styles-py-20251217-103413.txt  prompt-event_edit_dialog_enhanced-py-20251217-114258.txt  prompt-export_encrypted_script-py-20251217-114258.txt  prompt-final_migration-py-20251217-103413.txt  prompt-hotkey_ui-py-20251217-171524.txt  prompt-input_style_cache-py-20251217-114258.txt  prompt-input_styles-py-20251217-103413.txt  prompt-input_styles-py-20251217-114258.txt  prompt-label_styles-py-20251217-103413.txt  prompt-logging_manager-py-20251217-103413.txt  prompt-logging_manager_unified-py-20251217-114258.txt  prompt-logging_service-py-20251217-114258.txt  prompt-main_ui_controller-20251220_121356.txt  prompt-main_window_styled-py-20251217-103413.txt  prompt-performance_benchmark-py-20251217-103413.txt  prompt-performance_monitor-py-20251217-103413.txt  prompt-performance_test_unified-py-20251217-103413.txt  prompt-preview_panel_styles-py-20251217-103413.txt  prompt-pyinstaller_main-py-20251217-103413.txt  prompt-responsive_input_scaler-py-20251217-114258.txt  prompt-ruff-fix.md  prompt-script_data_access_adapter-py-20251217-103413.txt  prompt-script_data_model-py-20251217-103413.txt  prompt-script_data_model_unified-20251220_121156.txt  prompt-script_data_model_unified-py-20251217-103413.txt  prompt-script_data_service-py-20251217-103413.txt  prompt-script_editor_core-py-20251217-103413.txt  prompt-script_editor_core-py-20251217-114258.txt  prompt-script_event_table-py-20251217-103413.txt  (+40 more)
basedpyright-workflow/reports/: basedpyright_report_20251029_135527.html  basedpyright_report_20251029_135527.md  basedpyright_report_20251029_135621.html  basedpyright_report_20251029_135621.md  basedpyright_report_20251029_140926.html  basedpyright_report_20251029_140926.md  basedpyright_report_20251109_200759.html  basedpyright_report_20251109_200759.md  basedpyright_report_20251109_201056.html  basedpyright_report_20251109_201056.md  basedpyright_report_20251109_201408.html  basedpyright_report_20251109_201408.md  basedpyright_report_20251109_205330.html  basedpyright_report_20251109_205330.md  basedpyright_report_20251110_213544.html  basedpyright_report_20251110_213544.md  basedpyright_report_20251129_102734.md  basedpyright_report_20251129_111725.md  basedpyright_report_20251130_001530.md  basedpyright_report_20251204_173141.md  basedpyright_report_20251204_173808.md  basedpyright_report_20251210_101830.md  basedpyright_report_20251210_101943.md  basedpyright_report_20251216_185704.md  basedpyright_report_20251216_185753.md  basedpyright_report_20251217_103059.md  basedpyright_report_20251217_114243.md  basedpyright_report_20251217_130655.md  basedpyright_report_20251217_131509.md  basedpyright_report_20251217_131939.md  basedpyright_report_20251217_171512.md  basedpyright_report_20251217_171920.md  basedpyright_report_20251217_173743.md  (+20 more)
(+1996 files in other folders)
